Adds accidentally deleted dependecy and removes obsolete jvm option